# AutomatizadorDeCorreos

./: .gitignore  Makefile  README.md  netlify.toml  start.ps1  vercel.json
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  migrate_columns.py  migrate_daily_summaries.py  migrate_priority.py  migrate_priority2.py  migrate_priority3.py  migrate_rules_priority.py  pyproject.toml  run.py  supabase_schema.sql
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/core/: config.py  demo_seed.py  event_bus.py  exceptions.py  scheduler.py  security.py  sse.py
backend/app/core/email_pipeline/: __init__.py  ai_service.py  classifier.py  cleaner.py  compressor.py  detector.py  extractor.py  metrics.py  sanitizer.py
backend/app/database/: session.py  supabase.py
backend/app/models/: mixins.py  models.py
backend/app/modules/auth/: api.py  repository.py  schemas.py  service.py
backend/app/modules/cases/: analysis.py  api.py  repository.py  schemas.py  service.py  statuses.py
backend/app/modules/emails/: api.py  events.py  repository.py  schemas.py  service.py
backend/app/modules/gmail/: api.py  events.py  repository.py  schemas.py  service.py
backend/app/modules/notifications/: api.py  events.py  repository.py  schemas.py  service.py
backend/app/modules/rules/: api.py  engine.py  repository.py  (+4 more)
backend/app/repositories/: base.py
backend/docker/: .dockerignore  Dockerfile
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py  test_auth.py  test_rules.py
(+99 files in other folders)
